--- a/app/src/main/res/layout/add.xml
+++ b/app/src/main/res/layout/add.xml
@@ -12,19 +12,19 @@
         android:orientation="vertical">
 
         <include
-            android:id="@+id/addtaskToolbar"
+            android:id="@+id/add_inclusion_add_toolbar"
             layout="@layout/add_toolbar" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/add_csl"
+            android:id="@+id/add_csl_containerForImageSelector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/addtaskToolbar"
+            android:layout_below="@id/add_inclusion_add_toolbar"
             android:layout_centerHorizontal="true"
             android:background="@color/default_app_background">
 
             <TextView
-                android:id="@+id/settaskimagetext"
+                android:id="@+id/add_txv_AddImageText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -34,14 +34,14 @@
                 android:textColor="@color/default_text_color"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/editTaskImageSelector"
+                app:layout_constraintEnd_toStartOf="@+id/add_CIV_ImageSelector"
                 app:layout_constraintHorizontal_bias="0.816"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.511" />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/editTaskImageSelector"
+                android:id="@+id/add_CIV_ImageSelector"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_alignParentStart="true"
@@ -63,12 +63,12 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <RelativeLayout
-            android:id="@+id/nameanddesc"
+            android:id="@+id/add_rll_containerForTitleDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tasktitletext"
+                android:id="@+id/add_txv_TitleInputText"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_marginHorizontal="30dp"
@@ -79,8 +79,8 @@
                 android:textSize="17sp" />
 
             <EditText
-                android:id="@+id/editTaskTitleInput"
-                android:layout_below="@id/tasktitletext"
+                android:id="@+id/add_edt_TitleInput"
+                android:layout_below="@id/add_txv_TitleInputText"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginHorizontal="30dp"
@@ -90,8 +90,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
-                android:id="@+id/taskdescrtext"
-                android:layout_below="@id/editTaskTitleInput"
+                android:id="@+id/add_txv_DescrInputText"
+                android:layout_below="@id/add_edt_TitleInput"
                 android:text="Task Description:"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginBottom="0dp"
@@ -99,8 +99,8 @@
                 android:textSize="17sp"/>
 
             <EditText
-                android:id="@+id/editTaskDescriptionInput"
-                android:layout_below="@id/taskdescrtext"
+                android:id="@+id/add_edt_DescrInput"
+                android:layout_below="@id/add_txv_DescrInputText"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="10dp"
                 android:layout_height="50dp"
@@ -111,14 +111,14 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/datetimepickercontainer_addtask"
+            android:id="@+id/add_rll_containerForDateTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/default_app_background"
             android:paddingVertical="10dp">
 
             <TextView
-                android:id="@+id/editTaskDatePreview"
+                android:id="@+id/add_txv_DateTimeInputPreview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -131,10 +131,10 @@
                 android:textSize="17sp" />
 
             <Button
-                android:id="@+id/editTaskOpenDatePicker"
+                android:id="@+id/add_btn_DateTimeInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/editTaskDatePreview"
+                android:layout_below="@id/add_txv_DateTimeInputPreview"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:background="@color/main_blue"
@@ -146,7 +146,7 @@
         </RelativeLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/editTaskColorPreview"
+            android:id="@+id/add_csl_containerForColorPicker"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="-4dp"
@@ -156,7 +156,7 @@
             tools:layout_editor_absoluteY="0dp">
 
             <TextView
-                android:id="@+id/settaskcolortext"
+                android:id="@+id/add_txv_ColorInputText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dp"
@@ -171,7 +171,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/editTaskColorPicker"
+                android:id="@+id/add_btn_ColorPicker"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
                 android:layout_marginHorizontal="20dp"
@@ -181,13 +181,13 @@
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/colorpicker_preview"
+                app:layout_constraintEnd_toStartOf="@+id/add_txv_ColorPreview"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/colorpicker_preview" />
+                app:layout_constraintTop_toTopOf="@+id/add_txv_ColorPreview" />
 
             <EditText
-                android:id="@+id/editTaskColorHexInput"
+                android:id="@+id/add_edt_ColorPickerHexadecimalInput"
                 android:layout_width="200dp"
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="20dp"
@@ -204,7 +204,7 @@
                 app:layout_constraintVertical_bias="1.0" />
 
             <TextView
-                android:id="@+id/colorpickerhexinputtext"
+                android:id="@+id/add_txv_ColorPickerHexadecimalInputText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
@@ -220,7 +220,7 @@
                 app:layout_constraintVertical_bias="0.66" />
 
             <TextView
-                android:id="@+id/colorpicker_preview"
+                android:id="@+id/add_txv_ColorPreview"
                 android:layout_width="120dp"
                 android:layout_height="45dp"
                 android:layout_marginTop="36dp"
