--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -7,7 +7,8 @@
     >
 
     <include
-        layout="@layout/main_toolbar"/>
+        android:id="@+id/include2"
+        layout="@layout/main_toolbar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/main_FAB_toAdd"
@@ -28,16 +29,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_rcv_taskView"
         android:layout_width="match_parent"
-        android:layout_height="575dp"
+        android:layout_height="550dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:layout_constraintTop_toBottomOf="@+id/include2"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -47,7 +47,7 @@
         android:alpha="0.5"
         android:text="No Data Found"
         android:textSize="25sp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
