--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -8,13 +8,22 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+    <ImageView
+        android:id="@+id/main_toolbar_img_menu"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="10dp"
+        android:src="@drawable/baseline_menu_24"
+        app:tint="@color/white" />
+
     <TextView
         android:id="@+id/main_toolbar_headerText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
 
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="60dp"
         android:padding="0dp"
         android:text="@string/app_name"
 
@@ -25,12 +34,12 @@
     <ImageView
         android:id="@+id/main_toolbar_img_delete"
         android:layout_width="40dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_height="50dp"
-        android:src="@drawable/baseline_delete_forever_24"
-        android:scaleType="fitXY"
         android:padding="5dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/baseline_delete_forever_24"
         app:tint="@color/white" />
 
 </RelativeLayout>
