--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="176dp"
+    android:id="@+id/nav_header_navigationDrawerHeader"
     android:background="#f35378"
     android:gravity="bottom"
     android:orientation="vertical"
