--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -24,27 +24,76 @@
 
             <ImageView
                 android:id="@+id/imageviewabout"
-                android:layout_centerHorizontal="true"
                 android:layout_width="150dp"
-                android:layout_below="@id/about_tbar"
                 android:layout_height="150dp"
+                android:layout_below="@id/about_tbar"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
 
                 android:src="@drawable/vremialogo" />
 
             <TextView
+                android:id="@+id/vremiabout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/imageviewabout"
+                android:layout_centerHorizontal="true"
                 android:fontFamily="@font/avantgarde"
-                android:id="@+id/vremiabout"
+                android:gravity="center"
                 android:text="Vremia"
                 android:textColor="@color/black"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/imageviewabout"
-                android:gravity="center"
                 android:textSize="25sp"
 
                 />
+
+            <TextView
+                android:id="@+id/vremiabout2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/vremiabout"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                android:fontFamily="@font/calibrireg"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="For completion of Applied Research in Computer Programming 1, and 3.
+Grade 11, Information Technology in Mobile App and Web Development\n\n
+STI College Marikina, April 2023 to June 2023\n\nThe Team:\nFernando Villanueva, Jr.\nKurtRussell Baybay\nJoriz Paulo Mari Lopez\nSean Emmanuel Sena\nMatt Aurelio Aguinaldo"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+
+                />
+            <TextView
+                android:id="@+id/vremiabout3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/vremiabout2"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                android:fontFamily="@font/calibrireg"
+                android:gravity="center"
+                android:padding="12dp"
+                android:textColor="@color/main_blue"
+                android:text="Click here to access the Application\'s Github Repository"
+                android:textSize="15sp"
+
+                />
+            <TextView
+                android:id="@+id/vremiabout4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/vremiabout3"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/calibrireg"
+                android:gravity="center"
+                android:padding="12dp"
+                android:textColor="@color/black"
+                android:text="Further information about this application, it\'s source code, and documentation is available at the link above."
+                android:textSize="15sp"
+
+                />
+
+
 
         </RelativeLayout>
     </LinearLayout>
